# trakt.py

./: .coveragerc  .editorconfig  .gitignore  .mailmap  .travis.yml  AUTHORS  CHANGES.rst  CONTRIBUTING.rst  MANIFEST.in  Pipfile  README.rst  build-requirements.txt  pyproject.toml  requirements.txt  requirements_py32.txt  requirements_test.txt  requirements_test_py32.txt  requirements_travis.txt  requirements_travis_py32.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  travis_install.sh
.github/workflows/: publish.yml  test.yml
doc/source/: ChangeLog.rst  apis.rst  conf.py  index.rst
docs/: conf.py  index.rst
docs/_templates/: sidebar_header.html
docs/sourcecode/: interfaces.rst  modules.rst  objects.rst
examples/: collection.py  helpers.py  history.py  lists.py  media_center.py  pin.py  scrobbler.py  search.py  trending.py
examples/authentication/: device.py  pin.py
tests/: __init__.py  test_calendars.py  test_configuration.py  test_context_collection.py  test_helpers.py  test_http.py  test_interface.py  test_lists.py  test_media_mapper.py  test_oauth.py  test_objects_list.py  test_pagination.py  test_popular.py  test_progress.py  test_recommended.py  test_scrobble.py  test_search.py  test_summary.py  test_sync_movies.py  test_sync_shows.py  test_trending.py  test_user.py  test_user_list.py  test_user_lists.py
tests/core/: helpers.py  mock.py  semaphore.py
tests/fixtures/: download.py
tests/oauth/: test_device.py  test_device_poller.py  test_oauth.py  test_pin.py
tests/objects/: test_list.py
tests/users/: test_following.py  test_friends.py  test_history.py  test_ratings.py  test_watched.py  test_watchlist.py
trakt/: __init__.py  client.py  helpers.py  hooks.py  media_mapper.py  objects.py  request.py  sphinxext.py  version.py
trakt/core/: configuration.py  context_collection.py  context_stack.py  emitter.py  errors.py  exceptions.py  helpers.py  http.py  keylock.py  pagination.py  request.py
trakt/interfaces/: __init__.py  account.py  auth.py  base.py  calendars.py  oauth.py  scrobble.py  search.py
trakt/mapper/: __init__.py  basic.py  comment.py  hidden.py  list.py  list_item.py  progress.py  search.py  summary.py  sync.py  user.py
trakt/models/: airs.py  calendar.py  list.py  search.py  summary.py  user.py
trakt/objects/: __init__.py  (+13 more)
(+396 files in other folders)
