[metadata]
name = trakt.py
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Python interface for the Trakt.tv API
description-file = README.rst
keywords = trakt.tv, api, client
platforms = any
home-page = https://github.com/fuzeman/trakt.py
license = MIT
classifier =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true

[files]
packages =
    trakt

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[egg_info]
post-hook.write_version = trakt.hooks.write_version
