[metadata]
name = trakt.py
author = Dean Gardiner
author_email = me@dgardiner.net
summary = Python interface for the Trakt.tv API
description_file = README.rst
keywords = trakt.tv, api, client
platforms = any
home_page = https://github.com/fuzeman/trakt.py
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true

[files]
packages =
    trakt

[aliases]
test = pytest

[bdist_wheel]
universal = 1

[options.entry_points]
egg_info.writers = 
    version.py = trakt.hooks:write_version
